--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -113,3 +113,8 @@ $catch: #FF454F;
 	justify-content: space-between;
     align-items: center;
 }
+@mixin rule {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
